--- a/camerafront/src/app/main/profile/statistics/statistics.component.html
+++ b/camerafront/src/app/main/profile/statistics/statistics.component.html
@@ -1,27 +1,30 @@
-<div class="piechart">
-    <h1>{{ title | oTranslate }}</h1>
-    <div class="content-wrapper">
-        <o-chart class="pie" #pie type="pie" layout-fill service="productsRequest"
-            entity="myProductRequestEntry" x-axis="product_name" y-axis="rprofit"></o-chart>
-
+<div class="container">
+    <div class="filter-container">
         <o-form class="oform" #formFilter editable-detail="no" show-header="no" layout-direction="column">
-            <div fxLayout="column" layout-padding>
                 <o-daterange-input class="calendar" show-ranges="true" attr="date"
                     label="{{ 'INPUT.BUTTON.DATERANGE' | oTranslate }}" text-input-enabled="no" read-only="no"
                     required="yes" (onChange)="queryAll()" clear-button="yes" format="LL" separator=" to "
                     mode="desktop">
                 </o-daterange-input>
-                <o-text-input #totalOutput></o-text-input>
-            </div>
         </o-form>
     </div>
+    <div class="charts-container">
+        <div class="pie-container">
+            <o-chart class="pie" #pie type="pie" layout-fill service="productsRequest" entity="myProductRequestEntry"
+                x-axis="product_name" y-axis="rprofit"></o-chart>
+            <span>Total: <b>{{pieTotal}}€</b></span>
+        </div>
+        <div class="barchart-container">
+            <o-chart #multiBar class="multibar" type="multiBar" layout-fill [data]="data3"></o-chart>
+        </div>
+    </div>
 </div>
-<div class="barchart">
-     <!-- <o-chart type="discreteBar" x-label="product_name" y-label="product_name"
+
+<!-- <o-chart type="discreteBar" x-label="product_name" y-label="product_name"
     service="productsRequest"
     entity="rentBalance" x-axis="start_month" y-axis="total"></o-chartx-data-type="time" x-label="Time" y-label="Amount (€)"> [chart-parameters]="chartParams" -->
- <o-chart #multiBar type="multiBar" layout-fill [data]="data3" ></o-chart> 
-</div>
+
+
 <!-- <div class="barchart2">
     <o-chart type="discreteBar" x-label="start_month" y-label="total"
     service="productsRequest"
