--- a/camerafront/src/app/main/profile/statistics/statistics.component.html
+++ b/camerafront/src/app/main/profile/statistics/statistics.component.html
@@ -10,11 +10,13 @@
     </div>
     <div class="charts-container">
         <div class="pie-container">
+            <h2>Total - {{pieMonth.firstNum | oTranslate}} {{pieMonth.first | oTranslate}} {{pieMonth.separator | oTranslate}} {{pieMonth.secondNum | oTranslate}} {{pieMonth.second | oTranslate}}</h2>
             <o-chart class="pie" #pie type="pie" layout-fill service="productsRequest" entity="myProductRequestEntry"
                 x-axis="product_name" y-axis="rprofit"></o-chart>
             <span>Total: <b>{{pieTotal}}€</b></span>
         </div>
         <div class="barchart-container">
+            <h2>{{'PROFIT BY MONTH' | oTranslate}}</h2>
             <o-chart #multiBar class="multibar" type="multiBar" layout-fill [data]="data3"></o-chart>
         </div>
     </div>
