arreglo imagen login

--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -165,8 +165,10 @@
     display: none;
   }
 }
+
 .img-container {
   text-align: left;
+  background-color: transparent !important;
 }
 
 .logo_page {
