--- a/camerafront/src/app/login/login.component.html
+++ b/camerafront/src/app/login/login.component.html
@@ -72,14 +72,15 @@
           <button mat-raised-button color="black" type="submit">
             {{ "LOGIN" | oTranslate }}
           </button>
-          <div layout-padding></div>
-          <div layout-padding></div>
           <!-- <div fxLayout="column" fxLayoutAlign="center center" layout-padding>
             <span class="login_info">{{ 'EXAMPLE_LOGIN_INFO' | oTranslate }}:</span>
             <span class="dark_text">{{ 'USERNAME' | oTranslate }} : demo</span>
             <span class="dark_text">{{ 'PASSWORD' | oTranslate }} : demouser</span>
           </div> -->
-          <o-button (click)="createNewAccount()" label="Create new account"></o-button>
+          <div class="btnreg-container">
+            <button mat-raised-button style="width: 60%; background-color: rgb(49, 173, 44);" (click)="createNewAccount()">{{'Create new account' | oTranslate}}</button>
+          </div>
+          
         </form>
       </div>
     </div>
