--- a/camerafront/src/app/main/profile/profile-home/profile-home.component.css
+++ b/camerafront/src/app/main/profile/profile-home/profile-home.component.css
@@ -1,20 +1,25 @@
 .container {
-    padding-left: 2%;
-    padding-top: 1%;
+
+    margin: 20px;
+}
+
+.img-container {
+    padding: 10px;
+}
+
+.hspacer {
+    height: 20%
+}
+
+.spacer {
+    width: 15px;
 }
 
 .data-container {
-    width: 35%;
+    margin-top: 5%;
+}
+
+.data-container o-row {
     padding: 10px;
-    border: 5px double;
-    background-color: #426D83;
-    border-image-slice: 1;
-}
 
-.data-container o-text-input {
-    padding: 8px;
-
-}
-.campo-blanco {
-    background-color: #c7c7c7; 
 }
