--- a/camerafront/src/styles.scss
+++ b/camerafront/src/styles.scss
@@ -9,49 +9,55 @@
 .o-data-toolbar{
     padding: 0px 4px 15px 4px;
   } 
-  .mat-input-element {
-    color: white; /* Default color */
-    caret-color: white; /* Color of the caret when the element is not focused */
-}
+//   .mat-input-element {
+//     color: white; /* Default color */
+//     caret-color: white; /* Color of the caret when the element is not focused */
+// }
 
-.mat-focused .mat-input-element {
-    color: #ffffff; /* Brighter white color when focused */
-    caret-color: #ffffff !important; /* Bright white caret color when focused */
-}
+// .mat-focused .mat-input-element {
+//     color: #ffffff; /* Brighter white color when focused */
+//     caret-color: #ffffff !important; /* Bright white caret color when focused */
+// }
+// .mat-form-field-underline {
+//     background-color: white; /* Default underline color */
+// } 
+// .mat-focused .mat-form-field-underline {
+//     background-color: white; /* Default underline color */
+// } 
+// ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+//     color: white;
+//     opacity: 1; /* Firefox */
+// }
+// :-ms-input-placeholder { /* Internet Explorer 10-11 */
+//     color: white;
+// }
+// ::-ms-input-placeholder { /* Microsoft Edge */
+//     color: white;
+// }
+
 
 .mat-focused .mat-form-field-label {
-    color: white !important; /* Brighter white label when focused */
+    color: #85A3B6 !important; /* Brighter white label when focused */
 }
-
-.mat-form-field-underline {
-    background-color: white; /* Default underline color */
-} 
-.mat-focused .mat-form-field-underline {
-    background-color: white; /* Default underline color */
-} 
-
 .mat-form-field-ripple {
-    background-color: white !important; /* Brighter white underline color when focused */
-}
-
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 1; /* Firefox */
-}
-
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: white;
-}
-
-::-ms-input-placeholder { /* Microsoft Edge */
-    color: white;
+    background-color: #85A3B6 !important; /* Brighter white underline color when focused */
 }
 
 
-.mat-checkbox-checked.mat-accent .mat-checkbox-background,
-.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-    background-color: white;
-}
+
+
+
+
+
+
+
+
+
+
+// .mat-checkbox-checked.mat-accent .mat-checkbox-background,
+// .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+//     background-color: white !important;
+// }
 
 .mat-form-field.mat-warn .mat-form-field-underline .mat-form-field-ripple {
     background-color: #f44336 !important;
