--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -24,7 +24,8 @@
 .image {
   /* object-fit: cover; */
   /* height: 100%; */
-  width: 100%;
+  height: 100%;
+  /* width: 100%; */
  transition: transform 1s;
   /* -webkit-transform: scale(1.5); */
   
