--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -40,7 +40,7 @@
   
   <o-column class="grid-container">
 
-    <o-list #list attr="list" title="{{'SECONDARY_IMAGES | oTranslate'}}" service="products" entity="productImage" parent-keys="tproducts_id_product:id_product" columns="id_image;tproducts_id_product;pimage" keys="id_image"
+    <o-list #list attr="list" title="{{'SECONDARY_IMAGES' | oTranslate}}" service="products" entity="productImage" parent-keys="tproducts_id_product:id_product" columns="id_image;tproducts_id_product;pimage" keys="id_image"
    refresh-button="true" insert-button="true" delete-mode="true"
   quick-filter="no" row-height="medium" detail-mode="true" delete-button="yes" selectable="yes" insert-button="yes" insert-button-floatable="yes" insert-button-position="top">
 
