Retirados gran parte de los important!

--- a/camerafront/src/app/login/login.component.html
+++ b/camerafront/src/app/login/login.component.html
@@ -3,7 +3,7 @@
   <div class="login-outer-container">
     <div class="login-bg-container">
       <div class="img-container">
-        <img
+        <img 
           src="https://cdn.discordapp.com/attachments/1153576792486064158/1172154476132581396/logo_cameraRent.png?ex=655f48ec&is=654cd3ec&hm=dcca95f54e3da2138fee8ef6f96523c4722c0c6094c243ef457532a0a39efe70&"
           class="logo_page"
         />
@@ -30,7 +30,7 @@
 
           <div fxLayout="column" fxLayoutGap="10px">
             <mat-form-field fxFill class="m-top-24">
-              <input
+              <input style="color:aliceblue"
                 matInput
                 class="mat-input"
                 #user
@@ -43,7 +43,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFill class="m-top-24">
-              <input
+              <input style="color:aliceblue"
                 matInput
                 class="mat-input"
                 #password
