--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -30,9 +30,7 @@
       position: relative;
       z-index: 1;
     }
-    .login-inner-container{
-      background-color: #416D83 !important;
-    }
+
 
     .login-bg-container::before {
       content: "";
@@ -53,7 +51,7 @@
 
       .login-inner-container {
         width: 100%;
-        background-color: grey;
+        background-color: #416D83;
 
         form {
           padding: 16px;
@@ -161,7 +159,8 @@
     .footer-container {
       div {
         margin: 0 auto;
-        place-content: center !important;
+        color: aliceblue;
+
       }
     }
   }
@@ -198,7 +197,4 @@
   color: white;
   padding-left: 20px;
 }
- .mat-input-element {
-  color: #ffffff !important; /* Brighter white color when focused */
-  caret-color: #ffffff !important; /* Bright white caret color when focused */
-}
+
