--- a/camerafront/src/app/main/profile/my-rentals-home/button-column-renderer/button-column-renderer.component.css
+++ b/camerafront/src/app/main/profile/my-rentals-home/button-column-renderer/button-column-renderer.component.css
@@ -1,2 +1,11 @@
+.container{
+width: 100%;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+}
+.container mat-icon{
+    color:rgb(214, 69, 69);
+    font-size: 30px;
 
-
+}
