--- a/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.css
+++ b/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.css
@@ -1,19 +1,21 @@
-.container{
+.container {
     height: 100%;
     width: auto;
     display: flex;
     flex-direction: column;
 }
+
 .detail-container {
-    height: 45%;
+    height: 40%;
     text-align: center;
 
 }
-  .img-container {
+
+.img-container {
     border-top-left-radius: 50px;
     height: 50%;
     width: 100%;
-}  
+}
 
 .img-container img {
     object-fit: cover;
@@ -23,15 +25,16 @@
 }
 
 .table-container {
-    height: 30%
+height: 10%;
 }
 
 .button_container {
     display: flex;
     height: 10%;
     justify-content: end;
-    padding-right: 5%;
+    padding: 15px;
 }
-.data-container{
+
+.data-container {
     padding: 10px;
 }
