--- a/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
@@ -11,16 +11,18 @@
         </div>
     </div>
     <div class="table_container">
-        <o-table #table2 show-title="true" title="{{'CONFLICTED RENTS' | oTranslate }}" service="productsRequest"
+        <o-table #table2 show-title="true" title="{{'CONFLICTED RENTS' | oTranslate }}:" service="productsRequest"
             entity="myProductRequestEntry"
             columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;rprice;request_text;r_user;p_user;rprofit"
             visible-columns="start_date;end_date;r_user;rprofit;profit_diff" pageable="no" insert-button="no"
-            delete-button="no" detail-mode="none" refresh-button="none" query-on-init="no">
-            <o-table-column attr="start_date" title="start_date" type="date" format="L"></o-table-column>
+            delete-button="no" detail-mode="none" refresh-button="none" query-on-init="no" quick-filter="no" pagination-controls="no" page-size-options="no" virtual-scroll="yes"
+            default-visible-columns="start_date;end_date;r_user;rprofit;profit_diff" >
+            <o-table-column attr="start_date" title="start_date" type="date" format="L"
+                ></o-table-column>
             <o-table-column attr="end_date" title="end_date" type="date" format="L"></o-table-column>
-            <o-table-column attr="rprofit" title="profit" currency-symbol="€" type="currency"
+            <o-table-column width="15%" attr="rprofit" title="profit" currency-symbol="€" type="currency"
                 currency-symbol-position="right"></o-table-column>
-            <o-table-column attr="profit_diff" title="profit_diff">
+            <o-table-column attr="profit_diff" title="profit_diff" content-align="center">
                 <app-profit-dif-column-renderer></app-profit-dif-column-renderer>
             </o-table-column>
             <!-- <o-table-column-calculated attr="profit" title="profit" [operation-function]="calculateProfit.bind(this)">
@@ -30,7 +32,9 @@
         </o-table>
     </div>
     <div class="button_container">
-        <o-button attr="bconfirm" type="RAISED" layout-padding color="Accent" label="APPLY REQUEST" layout-padding (click)="updateState()"></o-button>
-        <o-button attr="bcancel" type="STROKED" layout-padding color="Warn" label="CANCEL" layout-padding (click)="closeDialog()"></o-button>
+        <o-button attr="bconfirm" type="RAISED" layout-padding color="Accent" label="APPLY REQUEST" layout-padding
+            (click)="updateState()"></o-button>
+        <o-button attr="bcancel" type="STROKED" layout-padding color="Warn" label="CANCEL" layout-padding
+            (click)="closeDialog()"></o-button>
     </div>
 </o-column>
