--- a/camerafront/src/app/main/profile/my-rentals-home/button-column-renderer/button-column-renderer.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-home/button-column-renderer/button-column-renderer.component.html
@@ -1,6 +1,10 @@
-<ng-template #templateref let-cellvalue="cellvalue" let-rowvalue="rowvalue">
-        <span *ngIf="rowvalue.state == 'pending'" style="color:rgb(214, 69, 69); width: 25px;"
-            (click)="showDialog(rowvalue)">
-            <mat-icon>close</mat-icon>
-        </span>
+<ng-template  #templateref let-cellvalue="cellvalue" let-rowvalue="rowvalue">
+    <div class="container">
+                <!-- <span *ngIf="rowvalue.state == 'pending'" style="color:rgb(214, 69, 69); width: 25px;style="color:rgb(214, 69, 69);""
+            (click)="showDialog(rowvalue)"> -->
+            <mat-icon *ngIf="rowvalue.state == 'pending'" 
+            (click)="showDialog(rowvalue)">close</mat-icon>
+        <!-- </span> -->
+    </div>
+
 </ng-template>
