--- a/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.css
+++ b/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.css
@@ -1,27 +1,49 @@
-.in-container{
-    height: 90%;
+.in-container {
+  height: 90%;
 }
-.out-container{
-    height: 90%;
+
+.out-container {}
+
+.detail-container {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  padding: 10px;
+  padding-left: 125px;
+  margin: 30px;
 }
-  .detail-container{
-    display: inline-block;
-    padding: 4px;
-  }
-  .button-container{
-    display: inline-block;
-    justify-content: end;
-  }
-  .coment-container{
-    padding: 4px;
-    /* display: block; */
-    display: flex;
-    flex-direction: column;
-  }
-  .expandable-container{
-    /* height: 3vw; */
-    font-size: 1.2em;    
-  }
-  .out-container tr{
-    height: 200px;
-  }
+.detail-container span{
+  width: fit-content;
+}
+
+.button-container {
+  display: inline-block;
+  justify-content: center;
+  padding-bottom: 20px;
+
+}
+.button-container o-button {
+  border-radius: 20px;
+}
+
+.button-border {
+  background-color:  #85A3B6;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.coment-container {
+  padding: 4px;
+  /* display: block; */
+  display: flex;
+  flex-direction: column;
+}
+
+.expandable-container {
+  /* height: 3vw; */
+  font-size: 1.2em;
+}
+
+/* .out-container tr {
+  height: 200px;
+} */
