--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.css
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.css
@@ -10,23 +10,58 @@
     display: flex;
     justify-content: center;
 }
-.images-container{
+.product-details-container{
     display: flex;
  
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    width: 100%;
+    height: 70%;
 }
 
 .image-container {
-    max-width: 70%;
+    width: 55%;
+    
+    display: flex; 
+    /* align-items: center; */
+     justify-content: center;
+}
+.image-container o-image{
+    width: 100%;
+}
+.image-container-column{
+    border-radius: 50px;
+    /* height: 50%; */
+     padding: 30px 60px 20px 60px; 
+     margin: 10px;
 }
 
+
 .image-list-container{
-    width: 27%;
+    width: 20%;
+    height: 100%;
+    padding-top: 25px;
+    padding: 10px;
+    /* margin-left: 20px; */
+    display: flex;
+    align-items: center;
+
+    /* justify-content: center; */
 }
-.grid-container {
-    height: 50%;
-    padding-bottom: 50px;
-    width: 80%;
+.image-list-container o-column{
+    border-radius: 50px;
+    
+    /* overflow: scroll; */
+    /* margin-left: 20px; */
+}
+
+.list-container{
+        width: 100%;
+        height: 100%;
+}
+.list-container o-column{
+    padding: 40px 0px 40px 5px;
+    /* margin-right: 10px; */
+    /* margin-top: 15px; */
 }
 
 .detail-container {
@@ -35,12 +70,26 @@
         align-items: center;
         text-align: center; */
     /* width: 80%; */
-    height: 50%;
-    padding: 0px 60px 60px 60px;
+    border-radius: 50px;
+    /* height: 50%; */
+     /* padding: 30px 60px 20px 60px; 
+     margin: 20px; */
+    /* margin-right: 10px; */
+    /* margin-top: 15px; */
+    width: 30%;
+    height: 100%;
+}
+.detail-container-column{
+    border-radius: 50px;
+    /* height: 50%; */
+     padding: 80px 50px 80px 50px; 
+     margin: 10px;
 }
 
 .detail-container o-row {
-    padding: 5px 0px 5px 5px;
+    padding: 25px;
+    /* padding: 20px; */
+    /* padding: 5px 0px 5px 5px; */
     /* width: 100%; */
 
 }
