--- a/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.css
+++ b/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.css
@@ -3,11 +3,22 @@
     height: 100%;
 }
 
-.image-container {}
+.image-container {
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.image-container o-image{
+    max-width: 70%;
+}
 
 .detail-container {
     height: 100%;
-    padding: 0px 60px 60px 60px;
+    border-radius: 50px;
+    padding: 30px 60px 20px 60px;
+    margin-right: 10px;
+    margin-top: 15px;
 }
 
 .detail-container o-row {
